--- a/index.html
+++ b/index.html
@@ -31,6 +31,17 @@
     // 🧠 There are many ways to solve this, but practice using a for loop to iterate over the array.
     // 🧠 As you have done in the past, declare a variable before you start looping, to accumulate the result.
     function sumNumsFor(nums) {
+      let result = 0
+      for (let i = 0; i < nums.length; i++) {
+        let elem = nums[i]
+        if( typeof elem === 'number') {
+          if (elem === 13) {
+            return "I'm too superstitious!"
+          }
+          result += elem 
+        } 
+      }
+      return result
 
     }
 
@@ -41,7 +52,16 @@
     // ❗ Notes:
     // 🧠 There are many ways to solve this, but practice using a for loop to iterate over the characters of the string.
     function stripVowels(str) {
-
+      const splitStr = str.split('')
+      const result = []
+      
+      for (let i = 0; i < splitStr.length; i++) {
+        const char = splitStr[i]
+        if ( char !== 'a' && char !== 'e' && char !== 'i' && char !== 'o' && char !== 'u' ) {
+          result.push(char)
+        }
+      }
+      return result.join('')
     }
 
     // 👉 CHALLENGE 3
@@ -49,8 +69,20 @@
     // 🧠 Examples of usage:
     // sumNumsWhile([1, 2, 3]) // should return 6
     // sumNumsWhile([1, 2, 13]) // should return "I'm too superstitious!"
-    function sumNumsWhile() {
-
+    function sumNumsWhile(nums) {
+      let result = 0
+      let i = 0
+      while (i < nums.length) {
+        let elem = nums[i]
+        if (typeof elem === 'number') {
+          if (elem === 13) {
+            return "I'm too superstitious!"
+          }
+          result += elem
+        }
+        i++
+      }
+      return result
     }
 
     // 👉 CHALLENGE 4
@@ -70,7 +102,15 @@
     // 🧠 There are many ways to solve this, but practice using a while loop.
     // 🧠 Work out using pen and paper how the round number and the lifePoints change after each round.
     // 🧠 As long as there are lifePoints, decrease lifePoints by round number, and increase round number by one.
-    function fightMonsters() {
+    function fightMonsters(lifePoints) {
+      let round = 1
+      while (lifePoints > 0) {
+        lifePoints -= round
+        if (lifePoints <= 0) {
+          return `You died in round ${round}`
+        }
+        round++
+      }
 
     }
 
@@ -81,7 +121,16 @@
     // findEvenNums([0, 1, 2, 3, 4]) // should return [0, 2, 4]
     // ❗ Notes:
     // 🧠 Use any kind of loop you'd like and the push method to populate the array of even numbers.
-    function findEvenNums() {
+    function findEvenNums(inte) {
+      let even = []
+      for (let i in inte) {
+        let num = inte[i]
+        if (num % 2 === 0) {
+          even.push(num)
+        }
+      }
+      return even
+
 
     }
 
@@ -92,8 +141,18 @@
     // 🧠 Ages in the subarrays should appear in the same order they appeared in the original array.
     // 🧠 Examples of usage:
     // separateAges([31, 12, 25, 65, 84, 20]) // should return [[12, 20], [31, 25, 65, 84]]
-    function separateAges() {
-
+    function separateAges(ages) {
+      let under = [];
+      let others = [];
+      for (let i = 0; i < ages.length; i++) {
+        let age = ages[i];
+        if(age < 21) {
+          under.push(age)
+        } else {
+          others.push(age);
+        }
+      }
+      return [under, others];
     }
 
     // 👉 CHALLENGE 7
@@ -103,7 +162,10 @@
     // 🧠 The "tail" prop contains an array holding the elements of the array after the first one.
     // 🧠 Examples of usage:
     // headAndTail([1, 2, 3]) // should return { head: 1, tail: [2, 3] }
-    function headAndTail() {
+    function headAndTail(arr) { 
+      let head = arr[0]
+      let tail = arr.slice(1)
+      return {head, tail}
 
     }
 
@@ -114,7 +176,23 @@
     // nestedLoops(['hello', 'goodbye']) // should return ['hEllO', 'gOOdbyE']
     // ❗ Notes:
     // 🧠 To capitalize a string you can use its toUpperCase method: "a".toUpperCase() returns "A"
-    function nestedLoops() {
+    function nestedLoops(strings) {
+      let result = []
+      for (let i in strings) {
+        let word = strings[i]
+        let modWord = ''
+        for (let i in word) {
+          let char = word[i]
+          if (char === 'a' || char === 'e' || char === 'i' || char === 'o' || char === 'u' ) {
+            let upper = char.toUpperCase()
+            modWord += upper
+          } else {
+            modWord += char
+          }
+        }
+        result.push(modWord)
+      }
+      return result
 
     }
 
@@ -129,6 +207,12 @@
     // 🧠 Practice using pop and slice.
     // 🧠 Note that pop modifies the original array in place and returns the "popped" element, whereas slice gives us a brand new array.
     function crazyTrimmer(arr) {
+      if (arr.length % 2 === 0) {
+        arr.pop()
+        return arr 
+      } else {
+        return arr.slice(1, arr.length - 1)
+      }
 
     }
 
